# AwiseOctopus

./: .gitignore  README.md  README_zh.md  app.py  pyproject.toml  requirements.txt  test_scheduler.py  web_app.py
.trae/documents/: web_page_for_agent.md
cli_rich/: cli.py
cli_rich/commands/: chat.py  env.py  run.py  session.py
data/: config.db.template  experience.db  session.db  test_experience.db
data/experience_vector/: chroma.sqlite3
data/history/: prompt_8c67d7a7-2c80-42ac-908d-4e6d3f2caa24.txt  prompt_a2503ea0-c45b-4896-b0d6-611b5af1e557.txt
data/test_chroma/: chroma.sqlite3
data/test_experience_vector/: chroma.sqlite3
flutter_client/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
flutter_client/docs/: agent_api_contract.md
flutter_client/test/: widget_test.dart
models/: __init__.py  config_manager.py  dag_agent.py  dag_executor.py  execution_agent.py  experience_agent.py  experience_memory.py  interaction.py  safety_checker.py  session.py  session_store.py  thinking_agent.py  tool_runtime.py
models/memory/: __init__.py  experience_memory.py
models/sandbox/: __init__.py  local_sandbox.py  openai_sandbox.py  runner.py  test_sandbox.py  true_local_sandbox.py
models/tools/: python_eval.py  registry.py  shell_command.py
tests/: test_agent_tool_call_sequence.py  test_chat_history.py  test_cli_rich_smoke.py  test_cli_session_command_smoke.py  test_experience_agent_score_parse.py  test_experience_memory_session_id.py  test_interaction.py  test_safety_checker.py  test_session_store.py  test_shell_command_tool.py
(+16 files in other folders)
