[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awiseoctopus"
version = "0.1.0"
description = "AwiseOctopus CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.13.0",
  "APScheduler==3.11.2",
  "attrs==26.1.0",
  "certifi==2026.2.25",
  "click==8.3.2",
  "colorama==0.4.6",
  "distro==1.9.0",
  "dotenv==0.9.9",
  "duckduckgo_search==8.1.1",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.11",
  "jiter==0.14.0",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2025.9.1",
  "lxml==6.0.4",
  "openai==2.31.0",
  "primp==1.2.2",
  "pydantic==2.13.0",
  "pydantic_core==2.46.0",
  "python-dotenv==1.2.2",
  "referencing==0.37.0",
  "rpds-py==0.30.0",
  "sniffio==1.3.1",
  "tqdm==4.67.3",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzdata==2026.1",
  "tzlocal==5.3.1",
  "rich==13.7.1",
  "chromadb",
]

[project.scripts]
awiseoctopus = "cli_rich.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_rich*", "models*"]

